# menu_planner

./: .env.sample  .gitignore  README.md  crewai_flow.html  pyproject.toml
docs/: main_module.md
src/menu_planner/: config.py  main.py  schemas.py
src/menu_planner/crews/html_design_crew/: html_design_crew.py
src/menu_planner/crews/html_design_crew/config/: agents.yaml  tasks.yaml
src/menu_planner/crews/menu_designer_crew/: menu_designer_crew.py
src/menu_planner/crews/menu_designer_crew/config/: agents.yaml  menu_template.html  tasks.yaml
src/menu_planner/crews/poem_crew/: poem_crew.py
src/menu_planner/crews/poem_crew/config/: agents.yaml  tasks.yaml
src/menu_planner/crews/recipe_expert_crew/: recipe_expert_crew.py  template.html
src/menu_planner/crews/recipe_expert_crew/config/: agents.yaml  tasks.yaml
src/menu_planner/crews/shopping_crew/: shopping_crew.py
src/menu_planner/crews/shopping_crew/config/: agents.yaml  tasks.yaml
src/menu_planner/tools/: safe_serper.py  scrapeninja.py
