[project]
name = "menu_planner"
version = "0.1.0"
description = "menu_planner using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "composio-crewai>=0.7.15,<0.8.0",
]

[project.scripts]
kickoff = "menu_planner.main:kickoff"
run_crew = "menu_planner.main:kickoff"
plot = "menu_planner.main:plot"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
